# gather-step

./: .editorconfig  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  clippy.toml  deny.toml  gather-step.config.yaml  gather-step.config.yaml.example  gather-step.local.example.yaml  justfile  renovate.json  typos.toml
.cargo/: audit.toml  (+1 more)
crates/gather-step-analysis/: Cargo.toml
crates/gather-step-analysis/src/: agent_topology.rs  anchor.rs  canonical.rs  contract_drift.rs  conventions.rs  cross_repo.rs  cross_repo_participation.rs  crud_trace.rs  cycles.rs  dead_code.rs  deployment_topology.rs  event_topology.rs  evidence.rs  impact.rs  lib.rs  mock_leakage.rs  mongo_query_safety.rs  mongo_scan.rs  overview.rs  pack_assembly.rs  projection_impact.rs  proofs.rs  query.rs  semantic_health.rs  shared_component_usage.rs  shared_contract.rs  test_utils.rs  transport.rs  value_mirror.rs
crates/gather-step-analysis/tests/: cross_repo_participation.rs  pack_mode.rs  routing_parity.rs  transport.rs  value_mirror.rs
crates/gather-step-bench/: Cargo.toml
crates/gather-step-bench/benches/: graph.rs  latency.rs  memory.rs  parsing.rs
crates/gather-step-bench/src/: compare.rs  environment.rs  harness.rs  lib.rs  link_quality.rs  main.rs  metrics.rs  planning_oracle.rs  pr_oracle.rs  release_gate.rs  reliability.rs  threshold.rs  tool_trace.rs
crates/gather-step-cli/: Cargo.toml
crates/gather-step-cli/assets/: banner.txt
crates/gather-step-cli/benches/: index_bench.rs  query_bench.rs
crates/gather-step-cli/src/: app.rs  command_render.rs  daemon_client.rs  daemon_protocol.rs  daemon_proxy.rs  daemon_server.rs  errors.rs  freshness.rs  lib.rs  main.rs  managed_block.rs  path_safety.rs  storage_context.rs  test_helpers.rs
crates/gather-step-cli/src/commands/: clean.rs  compact.rs  conventions.rs  cross_repo_deps.rs  deployment_topology.rs  doctor.rs  events.rs  generate.rs  impact.rs  index.rs  init.rs  log.rs  mod.rs  no_args.rs  pack.rs  pr_review.rs  projection_impact.rs  qa_evidence.rs  reindex.rs  search.rs  serve.rs  setup_mcp.rs  status.rs  storage_report.rs  trace.rs  tui.rs  watch.rs  who_consumes.rs
crates/gather-step-cli/src/pr_review/: affected.rs  artifact_root.rs  cache.rs  changed.rs  cleanup.rs  delta_report.rs  engine.rs  index_runner.rs  mod.rs  parity.rs  target.rs  test_helpers.rs
crates/gather-step-cli/tests/: cli_commands.rs  cli_index_watch.rs  cli_init.rs  cli_no_args.rs  cli_setup_mcp.rs  cli_wizard_full.rs  concurrent_watch.rs  integration_pipeline.rs  pack_eval.rs  pack_oracle.rs  safety.rs
crates/gather-step-cli/tests/golden/: resolution_snapshot.golden
crates/gather-step-core/: Cargo.toml
crates/gather-step-core/src/: ai_contract.rs  config.rs  graph.rs  high_contract.rs  lib.rs  path_id.rs  payload.rs  process_metrics.rs  registry.rs  resolver.rs  schema.rs  virtual_nodes.rs  workspace.rs
crates/gather-step-deploy/: Cargo.toml
crates/gather-step-deploy/src/: lib.rs
crates/gather-step-git/: Cargo.toml
crates/gather-step-git/src/: analytics.rs  classify.rs  history.rs  intelligence.rs  lib.rs  ownership.rs  refs.rs  worktrees.rs
crates/gather-step-git/tests/: ownership.rs  sync_against_fixture.rs
crates/gather-step-mcp/: Cargo.toml
crates/gather-step-mcp/benches/: budget_writer.rs
crates/gather-step-mcp/src/: catalog.rs  config.rs  error.rs  evidence.rs  ids.rs  lib.rs  server.rs  tool_trace.rs
crates/gather-step-mcp/src/budget/: mod.rs  schema.rs  writer.rs
crates/gather-step-mcp/src/output/: mod.rs  redact.rs
crates/gather-step-mcp/src/tools/: .packs.rs.pending-snap  change_impact.rs  composite.rs  context_pack.rs  contract.rs  cross_repo.rs  crud_trace.rs  deployment_topology.rs  events.rs  labels.rs  mod.rs  orientation.rs  packs.rs  pr_review.rs  projection_impact.rs  proof_builder.rs  repo_intelligence.rs  schema_summary.rs  search.rs  who_consumes.rs
crates/gather-step-mcp/tests/: batch_plan_change.rs  secret_smoke.rs  trust.rs  workspace_summary_tools.rs
crates/gather-step-output/: Cargo.toml
crates/gather-step-output/src/: context_md.rs  evidence.rs  lib.rs  sanitize.rs
crates/gather-step-output/tests/: architecture_large_workspace.rs  markdown_injection.rs  workspace_summary.rs
crates/gather-step-parser/: Cargo.toml  README.md
crates/gather-step-parser/src/: lib.rs  manifests.rs  path_guard.rs  payload.rs  projection.rs  regex_dfa.rs  resolve.rs  top_level_split.rs  traverse.rs  tree_sitter.rs  ts_js_backend.rs  ts_js_oxc.rs  ts_js_swc.rs  tsconfig.rs  value_mirror.rs  workspace_manifest.rs
crates/gather-step-parser/src/frameworks/: ai_typescript.rs  azure.rs  detect.rs  drizzle.rs  fastapi.rs  frontend_hooks.rs  frontend_react.rs  frontend_router.rs  gateway_proxy.rs  local_config.rs  migration_utils.rs  mod.rs  mongo.rs  mongo_safety.rs  mongoose.rs  mongoose_migration.rs  nestjs.rs  nextjs.rs  prisma.rs  profile.rs  python_kafka.rs  registry.rs  storybook.rs  tailwind.rs  typeorm.rs  typeorm_migration.rs
crates/gather-step-parser/tests/: extension_classification.rs  extraction_fidelity.rs  oxc_parity.rs  oxc_self_validation.rs  python_import_regression.rs  python_phase5_regression.rs  regression.rs  workspace_alias.rs  workspace_framework_detection.rs
crates/gather-step-parser/tests/snapshots/: extraction_fidelity__barrel_reexports.snap  (+10 more)
crates/gather-step-storage/: Cargo.toml  README.md
crates/gather-step-storage/examples/: audit_cross_repo_edges.rs  count_cross_repo_edges_by_kind.rs
crates/gather-step-storage/src/: adjacency_blob.rs  bitcode_blob.rs  daemon_metadata.rs  daemon_state.rs  footprint.rs  fs_mode.rs  graph_store.rs  incremental.rs  indexer.rs  lib.rs  lock.rs  metadata.rs  pack_store.rs  reconcile.rs  search_store.rs  stores.rs  telemetry.rs  watcher.rs  workspace_indexer.rs
crates/gather-step-storage/tests/: crash_recovery.rs  decorator_producer_convergence.rs  event_identity.rs  filtered_search.rs  hook_boundary.rs  lock_self_heal.rs  mvcc_consistency.rs  path_identity.rs  python_resolution.rs  schema_version.rs  value_mirror_convergence.rs
(+276 files in other folders)
