[workspace]
resolver = "3"
members = [
    "crates/gather-step-analysis",
    "crates/gather-step-bench",
    "crates/gather-step-cli",
    "crates/gather-step-core",
    "crates/gather-step-git",
    "crates/gather-step-mcp",
    "crates/gather-step-output",
    "crates/gather-step-parser",
    "crates/gather-step-storage",
]

[workspace.package]
version = "2.2.0"
authors = ["JJ Adonis"]
edition = "2024"
rust-version = "1.94.1"
license = "MIT"
repository = "https://github.com/thedoublejay/gather-step"
homepage = "https://github.com/thedoublejay/gather-step"
description = "High-performance multi-repo codebase intelligence engine"

[workspace.dependencies]
gather-step-analysis = { path = "crates/gather-step-analysis", version = "2.2.0" }
gather-step-core = { path = "crates/gather-step-core", version = "2.2.0" }
gather-step-mcp = { path = "crates/gather-step-mcp", version = "2.2.0" }
gather-step-parser = { path = "crates/gather-step-parser", version = "2.2.0" }
gather-step-storage = { path = "crates/gather-step-storage", version = "2.2.0" }

tree-sitter = "=0.26.8"
tree-sitter-typescript = "0.23.2"
tree-sitter-javascript = "0.25"
tree-sitter-python = "=0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23.5"
redb = "4.0"
tantivy = "0.26"
rusqlite = { version = "0.39", features = ["bundled"] }
rayon = "1.12"
crossbeam-channel = "0.5.15"
clap = { version = "4.6.1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
thiserror = "2.0.18"
anyhow = "1.0.102"
indicatif = "0.18.4"
console = "0.16.3"
comfy-table = "7.2.2"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yaml_ng = "0.10"
toml = "1.1.2"
bitcode = "0.6.9"
blake3 = "1.8.4"
subtle = "2.6.1"
ignore = "0.4.25"
globset = "0.4.18"
rustc-hash = "2.1.2"
tokio = { version = "1.52.1", features = ["macros", "rt-multi-thread", "sync", "time", "signal", "net", "io-util"] }
tokio-util = "0.7.18"
notify = "9.0.0-rc.3"
gix = { version = "0.83", default-features = true }
regex = "1.12.3"
similar = "3.1.0"
lru = "=0.17.0"
quick_cache = "0.6.21"
smallvec = { version = "=1.15.1", features = ["serde"] }
camino = "1.2.2"
aho-corasick = "1.1.4"
memchr = "2.8.0"
libc = "0.2"

[workspace.dependencies.procfs]
version = "0.18.0"

[workspace.dependencies.insta]
version = "1.47.2"
features = ["yaml"]

[workspace.dependencies.pretty_assertions]
version = "1.4.1"

[workspace.dependencies.criterion]
version = "0.8.2"

[workspace.dependencies.proptest]
version = "1.11"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "homebrew"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin"]
# The archive format to use for non-windows builds (defaults .tar.xz)
unix-archive = ".tar.gz"
# The archive format to use for windows builds (defaults .zip)
windows-archive = ".zip"
# Which actions to run on pull requests
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Where to host releases
hosting = "github"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Homebrew tap to publish formulae to
tap = "thedoublejay/homebrew-tap"
# Whether to install an updater program
install-updater = false

[profile.dev]
debug = "line-tables-only"

[profile.dev.package."*"]
debug = false

[profile.dev.package.insta]
opt-level = 3

[profile.dev.package.similar]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.release-with-debug]
inherits = "release"
strip = false
debug = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[workspace.lints.rust]
unsafe_code = "forbid"
trivial_numeric_casts = "warn"
unused_lifetimes = "warn"
unused_import_braces = "warn"
unused_macro_rules = "warn"
redundant_lifetimes = "warn"
explicit_outlives_requirements = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
dbg_macro = "warn"
todo = "warn"
print_stdout = "warn"
print_stderr = "warn"
allow_attributes = "warn"
undocumented_unsafe_blocks = "warn"
must_use_candidate = "allow"
wildcard_imports = "allow"
too_many_lines = "allow"
too_many_arguments = "allow"
cognitive_complexity = "allow"
option_if_let_else = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"

[workspace.metadata.cargo-shear]
# Only list dependencies that cargo-shear cannot detect as used. Everything else
# should stay out of here so that genuinely unused crates surface as errors.
ignored = [
    "similar",
]
