[package]
name = "gather-step-analysis"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Analysis algorithms for Gather Step"

[dependencies]
gather-step-core.workspace = true
gather-step-parser.workspace = true
gather-step-storage.workspace = true
rustc-hash.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true

[lib]
doctest = false
