[package]
name = "gather-step-bench"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Benchmark quality harness for Gather Step"

[[bin]]
name = "gather-step-bench"
path = "src/main.rs"

[[bench]]
name = "parsing"
harness = false

[[bench]]
name = "graph"
harness = false

[[bench]]
name = "latency"
harness = false

[[bench]]
name = "memory"
harness = false

[dependencies]
gather-step-core.workspace = true
gather-step = { path = "../gather-step-cli", version = "3.5.0" }
gather-step-mcp.workspace = true
gather-step-storage.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
globset.workspace = true
gix.workspace = true
rustc-hash.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
thiserror.workspace = true
toml.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
procfs.workspace = true

[dev-dependencies]
gather-step-analysis.workspace = true
gather-step-parser.workspace = true
criterion = { workspace = true, features = ["html_reports"] }
rustc-hash.workspace = true
tempfile = "3.27.0"
tokio = { workspace = true, features = ["rt", "time"] }
tokio-util.workspace = true

[lints]
workspace = true

[lib]
doctest = false
