[package]
name = "gather-step"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "CLI binary for Gather Step"

[[bin]]
name = "gather-step"
path = "src/main.rs"

[lib]
name = "gather_step"
path = "src/lib.rs"

[features]
default = []
dhat-heap = ["dep:dhat"]

[dependencies]
anyhow.workspace = true
blake3.workspace = true
chrono.workspace = true
clap.workspace = true
dirs.workspace = true
rand.workspace = true
comfy-table.workspace = true
console.workspace = true
kanal.workspace = true
dhat = { workspace = true, optional = true }
gather-step-analysis.workspace = true
gather-step-core.workspace = true
gather-step-deploy.workspace = true
rustc-hash.workspace = true
gather-step-git.workspace = true
gather-step-mcp.workspace = true
gather-step-output.workspace = true
gather-step-parser.workspace = true
gather-step-storage.workspace = true
indicatif.workspace = true
mimalloc.workspace = true
serde.workspace = true
thiserror.workspace = true
serde_json.workspace = true
serde_norway.workspace = true
toml_edit.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm = "0.29.0"
ratatui = { version = "0.30.2", default-features = false, features = ["crossterm"] }

[dev-dependencies]
criterion.workspace = true
pretty_assertions.workspace = true
rusqlite.workspace = true
tempfile = "3.27.0"
toml.workspace = true

[[bench]]
name = "index_bench"
harness = false

[[bench]]
name = "query_bench"
harness = false

[lints]
workspace = true
