[package]
name = "gather-step-deploy"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Deployment artifact parsing for Gather Step"

[dependencies]
gather-step-core.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml_ng.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
