[package]
name = "gather-step-git"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Git history analysis for Gather Step"

[dependencies]
gather-step-core.workspace = true
gather-step-storage.workspace = true
gix.workspace = true
regex.workspace = true
blake3.workspace = true
rustc-hash.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
